@@ -1,3 +1,0 @@
-docs/preamble.txt
-docs/licence.txt
-docs/licendoc.txt
