@@ -1,3 +1,3 @@
 wxPython/README.txt
 wxPython/CHANGES.txt
-docs/licence.txt
+
