@@ -1,2 +1,2 @@
-docs/licendoc.txt
 docs/wxWindows-manual.html
+
